--- a/public/index.html
+++ b/public/index.html
@@ -24,6 +24,10 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+
+    <!-- custom link -->
+    <script src="https://kit.fontawesome.com/cbe97c6586.js" crossorigin="anonymous"></script>
+
     <title>React App</title>
   </head>
   <body>
